--- a/proyectoBlog/css/style.css
+++ b/proyectoBlog/css/style.css
@@ -155,7 +155,7 @@
 	.boton{
 		display: block;
 		border-radius: 10px;
-		color: white;
+		color: white !important;
 		padding: 10px;
 		background: #4d88ff;
 		border: 1px solid #4d88ff;
@@ -165,7 +165,7 @@
 	}
 
 	.boton{
-
+		color: white;
 		width: 90%;
 		text-align: center;
 		box-shadow: 0px 0px 1px #000000, 0px 3px 7px #000000, 0px 6px 14px #ccc;
@@ -200,8 +200,7 @@
 	.boton-A:hover, .boton-A0:hover, .boton-B:hover, .boton-C:hover{
 		cursor: pointer;
 		border: 2px solid #000000;
-		text-shadow: 0px 0px 0px black, -1px -1px 0px black, -2px -2px 0px black;
-		font-size: 20px;
+		font-size: 24px;
 	}
 
 	/*PRINCIPAL*/
